--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "description": "Utils for all egg projects",
   "scripts": {
     "lint": "eslint src test --ext ts",
-    "pretest": "npm run clean && npm run lint -- --fix",
+    "pretest": "npm run clean && npm run lint -- --fix && npm run prepublishOnly",
     "test": "npm run test-local",
     "test-local": "egg-bin test",
-    "preci": "npm run clean && npm run lint",
-    "ci": "egg-bin cov && npm run prepublishOnly",
+    "preci": "npm run clean && npm run lint && npm run prepublishOnly",
+    "ci": "egg-bin cov",
     "clean": "rimraf dist",
     "prepublishOnly": "tshy && tshy-after && attw --pack"
   },
