--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@types/mocha": "10",
     "@types/node": "22",
     "coffee": "5",
-    "egg-bin": "6",
+    "@eggjs/bin": "beta",
     "eslint": "8",
     "eslint-config-egg": "14",
-    "mm": "3",
+    "mm": "4",
     "npminstall": "7",
     "rimraf": "6",
     "runscript": "2",
