--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint src test --ext ts",
     "pretest": "npm run clean && npm run lint -- --fix && npm run prepublishOnly",
     "test": "npm run test-local",
+    "posttest": "npm run clean",
     "test-local": "egg-bin test",
     "preci": "npm run clean && npm run lint && npm run prepublishOnly",
     "ci": "egg-bin cov",
+    "postci": "npm run clean",
     "clean": "rimraf dist",
     "prepublishOnly": "tshy && tshy-after && attw --pack"
   },
