--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "lint": "eslint src test --ext ts",
     "pretest": "npm run clean && npm run lint -- --fix && npm run prepublishOnly",
-    "test": "npm run test-local",
+    "test": "egg-bin test",
     "posttest": "npm run clean",
     "test-local": "egg-bin test",
     "preci": "npm run clean && npm run lint && npm run prepublishOnly",
