--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,10 +1,10 @@
-name: CI
+name: CI for 4.x
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 4.x ]
   pull_request:
-    branches: [ master ]
+    branches: [ 4.x ]
 
 jobs:
   Job:
